# Reverse-Manoeuvre

./: .gitignore  README.md  control.py  geometry_solver.py  main.py  path_graph.py  path_points.csv  simulation.py  tuner.py
ROS Implementation/: CMakeLists.txt  package.xml
ROS Implementation/include/: geometry_solver.h  reverse_manoeuvre.h
ROS Implementation/msg/: ReverseStatus.msg
ROS Implementation/src/: geometry_solver.cpp  main.cpp  reverse_manoeuvre.cpp
Simulation/: main.py
Simulation/scripts/: geometry_solver.py  simulation.py
configs/: noOvershoot.yaml  overshoot.yaml
